--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "magnet-uri": "^2.0.1",
     "mkdirp": "^0.3.5",
     "parse-torrent": "^1.4.0",
-    "peer-wire-swarm": "^0.9.2",
+    "peer-wire-swarm": "git+https://github.com/xeoncore/peer-wire-swarm.git",
     "random-access-file": "^0.3.1",
     "rimraf": "^2.2.5",
     "thunky": "^0.1.0"
